<resources>
    <string name="app_name">v16</string>
    <string name="sign_up">Sign UP</string>
    <string name="name">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="sign_in">Sign IN</string>
    <string name="welcome">Welcome</string>
    <string name="your_details">These are your details form our DB</string>
    <string name="if_already_register">If already register SIGN IN</string>
</resources>