<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainbackground"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="20dp"
        android:layout_marginHorizontal="50dp"
        android:gravity="start"
        android:text="@string/sign_up"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:textStyle="bold"/>

    <com.google.android.material.textfield.TextInputLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="40dp"
        android:layout_marginVertical="8dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:helperText="*Required"

        app:startIconDrawable="@drawable/baseline_person_outline_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="username"
            android:textSize="20sp"
            android:background="@drawable/graybackground"
            android:hint="@string/enter_your_name"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:layout_marginHorizontal="40dp"
        app:helperText="*Required"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"

        app:startIconDrawable="@drawable/baseline_person_outline_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="username"
            android:hint="@string/name"
            android:textSize="20sp"
            android:background="@drawable/graybackground"
            
            />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:layout_marginHorizontal="40dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:helperText="*Required"
        app:startIconDrawable="@drawable/baseline_alternate_email_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress"
            android:background="@drawable/graybackground"
            android:textSize="20sp"
            android:hint="@string/email" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:layout_marginHorizontal="40dp"
        app:helperText="*Required"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:startIconDrawable="@drawable/baseline_password_24"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:autofillHints="password"
            android:background="@drawable/graybackground"
            android:textSize="20sp"
            android:hint="@string/password" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnsignup"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp">

    </Button>
    <TextView

        android:id="@+id/tvSignIN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/if_already_register"
        android:gravity="center"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="30dp"
        >

    </TextView>

</LinearLayout>